--- a/index.html
+++ b/index.html
@@ -35,25 +35,31 @@
         }
 
         /* Параллакс фон з гербом */
-        .parallax {
-            background: url('https://github.com/DatsivRoman12334524/mou.ua/blob/main/depositphotos_52886601-stock-illustration-vector-decorative-ukrainian-trident-removebg-preview.png?raw=true') no-repeat center;
-            background-size: cover;
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            z-index: -1; /* Задаємо, щоб зображення залишалося позаду всього контенту */
-            opacity: 0.15;
-            animation: parallaxMove 10s linear infinite;
-        }
+.parallax {
+    background: url('https://github.com/DatsivRoman12334524/mou.ua/blob/main/depositphotos_52886601-stock-illustration-vector-decorative-ukrainian-trident-removebg-preview.png?raw=true') no-repeat center;
+    background-size: contain;
+    position: absolute;
+    top: 100%; /* Опускаємо нижче */
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 200%;
+    height: 100%;
+    z-index: -1; /* Зображення залишається позаду всього контенту */
+    opacity: 0.15;
+    animation: parallaxZoom 6s ease-in-out infinite alternate;
+}
 
-        /* Анімація для параллаксу */
-        @keyframes parallaxMove {
-            0% { background-position: 0px -50px; }
-            50% { background-position: 0px 50px; }
-            100% { background-position: 0px -50px; }
-        }
+/* Анімація збільшення та зменшення */
+@keyframes parallaxZoom {
+    0% {
+        transform: translate(-50%, -50%) scale(1);
+    }
+    100% {
+        transform: translate(-50%, -50%) scale(1.2);
+    }
+}
+
+
 
                 /* Заголовок та меню */
                 header {
@@ -78,28 +84,80 @@
         }
 
 
-        nav {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            background-color: rgba(0, 123, 255, 0.9);
-            padding: 1em 0;
-            font-size: 1.3em;
-            transition: all 0.3s ease;
-            margin-top: 1em;
-            z-index: 1;
+      /* Навігаційне меню */
+      nav {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(0, 0, 0, 0.8);
+    padding: 1em 0;
+    font-size: 1.3em;
+    transition: all 0.3s ease;
+    margin-top: 1em;
+    z-index: 1;
+    border-radius: 20px; /* Add rounded corners */
+    overflow: hidden; /* To make sure content doesn't overflow the rounded corners */
+}
+
+
+nav a {
+    text-decoration: none;
+    margin: 0 25px;
+    color: #fff;
+    font-weight: 600;
+    position: relative;
+    padding: 5px 10px; /* Add some padding for better appearance */
+    border: 2px solid transparent; /* Transparent border initially */
+    border-radius: 12px; /* Rounded corners */
+    transition: all 0.3s ease;
+}
+
+nav a:hover {
+    color: #fcd116; /* Yellow color on hover */
+    transform: scale(1.1); /* Slight scale on hover */
+    border-color: #fcd116; /* Add yellow border on hover */
+}
+
+
+nav a:hover {
+    color: #fcd116; /* Yellow color on hover */
+    transform: scale(1.1); /* Slight scale on hover */
+    border-color: #fcd116; /* Add yellow border on hover */
+}
+
+        article strong {
+            color: #f39c12; /* Light Yellow for strong text */
         }
-        nav a {
+
+        .read-more-btn {
+            display: inline-block;
+            background-color: #f1c40f; /* Yellow color for the button */
+            padding: 10px 20px;
+            font-size: 1.1em;
+            color: #00274d;
             text-decoration: none;
-            margin: 0 25px;
-            color: #fff;
-            font-weight: 600;
-            position: relative;
-            transition: all 0.3s ease;
+            border-radius: 5px;
+            text-align: center;
+            margin-top: 20px;
         }
-        nav a:hover {
-            color: #fcd116;
+
+        .read-more-btn:hover {
+            background-color: #f39c12; /* Light yellow for hover effect */
         }
+
+
+/* Анімація появи меню */
+@keyframes slideInNav {
+    from {
+        opacity: 0;
+        transform: translateY(-20px);
+    }
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
 
         /* Креативний контент */
         .content {
